refactor: use custom properties css

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -7,9 +7,7 @@ header {
 }
 
 .header-content {
-  padding: 1rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding: var(--pw-spacing);
 }
 
 .colored-border {
