--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -1,17 +1,21 @@
 html {
-  --bg-color: white;
+  --pw-bg-color: white;
+  --pw-bg-edge: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+  --pw-button-deep-bg: linear-gradient(43deg, #4158D0 0%, #C850C0 100%);
+  --pw-button-bg-shadow: linear-gradient(43deg, #4158D0 0%, #C850C0 100%);
+  --pw-spacing: 1rem;
 }
 
 @media (prefers-color-scheme: dark) {
   html {
-    --bg-color: black;
+    --pw-bg-color: black;
   }
 }
 
 .dark {
-  --bg-color: black;
+  --pw-bg-color: black;
 }
 
 .light {
-  --bg-color: white;
+  --pw-bg-color: white;
 }
