--- a/public/css/illustrations.css
+++ b/public/css/illustrations.css
@@ -9,15 +9,14 @@
   margin-inline-start: auto;
   margin-inline-end: auto;
   width: fit-content;
-  background-color: #4158D0;
-  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+  background-color: var(--pw-bg-color-edge, #4158D0);
+  background-image: var(--pw-bg-edge);
 }
 
 .woman-thinking {
-  width: 70vw;
-  height: 70vw;
+  width: 400px;
+  height: 400px;
   border-radius: 50%;
-  background-image: url('../images/woman-thinking_800.jpg');
+  background-image: url('../images/woman-thinking_400.jpg');
   background-size: cover;
-  transform: scaleX(-1);
 }
