--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,7 @@
 body {
   font-family: 'Courier New', Courier, monospace;
   background-color: var(--pw-bg-color);
+  color: var(--pw-text-color, white);
 }
 
 main {
