--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -1,4 +1,5 @@
 html {
+  --pw-text-color: black;
   --pw-bg-color: white;
   --pw-bg-edge-color: #4158D0;
   --pw-bg-edge: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
@@ -10,6 +11,7 @@ html {
 @media (prefers-color-scheme: dark) {
   html {
     --pw-bg-color: black;
+    --pw-text-color: white;
   }
 }
 
