--- a/public/css/info-code.css
+++ b/public/css/info-code.css
@@ -57,7 +57,7 @@
 .animate {
   animation-duration: 0.5s;
   animation-delay: 0.5s;
-  animation-fill-mode: both;
+  animation-fill-mode: forwards;
   animation-timing-function: ease-in
 }
 
