refactor: show questions as code in an editor

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,7 +2,7 @@ header {
   position: sticky;
   width: 100%;
   top: 0;
-  background: white;
+  background-color: var(--pw-bg-color);
   z-index: 10;  
 }
 
