--- a/src/css/info-code.css
+++ b/src/css/info-code.css
@@ -1,11 +1,11 @@
 .info-code {
+  --pw-spacing-code: 0.5rem;
   display: grid;
   gap: 1;
-  grid-template-columns: 21px 1fr;
+  grid-template-columns: var(--pw-spacing) 1fr;
   background-color: black;
-  padding: var(--pw-spacing);
-  padding: 0;
-  padding-block-start: calc(var(--pw-spacing, 1rem) * 2);
+  padding: 0 var(--pw-spacing);
+  padding-top: var(--pw-spacing-code);
 }
 
 .code-container {
@@ -15,12 +15,14 @@
 }
 
 .code {
-  font-size: 1.5rem;
-  line-height: 1.4;
   color: white;
+  position: relative;
+}
+
+.code, .line-number {
+  line-height: 1.4;
   margin: 0;
   margin-block-end: 0.5rem;
-  position: relative;
 }
 
 .code span {
@@ -31,11 +33,8 @@
 
 .line-number {
   color: goldenrod;
-  font-size: 1.5rem;
-  line-height: 1.4;
-  margin: 0;
-  margin-block-end: 0.5rem;
-  display: block;
+  text-align: right;
+  padding-right: 1rem;
 }
 
 .blue {
@@ -83,7 +82,7 @@
 .typing {
   overflow: hidden;
   opacity: 0;
-  width: 325px;
+  width: 221px;
   border-right: 3px solid red;
   animation-name: typing, blink-cursor;
   animation-duration: 3s, 1s;
@@ -95,7 +94,7 @@
 
 @keyframes typing {
   from { width: 0; opacity: 1 }
-  to { width: 325px; opacity: 1; }
+  to { width: 221px; opacity: 1; }
 }
 
 @keyframes blink-cursor {
