--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,6 +8,7 @@ body {
   font-family: 'Courier New', Courier, monospace;
   background-color: var(--pw-bg-color);
   color: var(--pw-text-color, white);
+  font-size: var(--pw-font-size, 16px);
 }
 
 main {
@@ -15,7 +16,7 @@ main {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 1.8rem;
 }
 
 p {
