--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -6,8 +6,10 @@ html {
   --pw-button-deep-bg: linear-gradient(43deg, #4158D0 0%, #C850C0 100%);
   --pw-button-bg-shadow: linear-gradient(43deg, #4158D0 0%, #C850C0 100%);
   --pw-spacing: 1rem;
+  --pw-inner-space: 1rem;
   --pw-code-line-height: 1.4;
   --pw-code-spacing: 0.5rem;
+  --pw-code-editor-border: none;
 }
 
 
@@ -15,6 +17,7 @@ html {
   html {
     --pw-bg-color: black;
     --pw-text-color: white;
+    --pw-code-editor-border: 1px solid rgba(128, 128, 128, 0.342);
   }
 
 }
