refactor: use css variables and add entrance animation to code-editor

--- a/src/css/code-editor.css
+++ b/src/css/code-editor.css
@@ -1,78 +1,77 @@
 .code-editor {
-  font-size: 14px;
-  border-radius: 5px;
+  font-size: var(--pw-code-size, 14px);
+  border-radius: var(--pw-code-editor-radius-width);
 }
 
 .title-bar {
   display: flex;
-  gap: 0.5rem;
-  background-image: linear-gradient(135deg, blue, violet, orange);
-  padding: 1rem;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  gap: var(--pw-code-spacing, 0.5rem);
+  background-image: var(--pw-code-editor-bg-title-bar);
+  padding: var(--pw-inner-spacing);
+  border-top-left-radius: var(--pw-code-editor-radius-width);
+  border-top-right-radius: var(--pw-code-editor-radius-width);
+}
+
+.title-bar__btn {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  box-shadow: 0px 0px 3px black;
+}
+
+.title-bar__btn--red {
+  background-color: rgb(255, 0, 106);
+  
+}
+
+.title-bar__btn--yellow {
+  background-color: rgb(255, 208, 0);
+}
+
+.title-bar__btn--green {
+  background-color: rgb(33, 165, 0);
 }
 
 .code-wrapper {
   display: grid;
-  grid-template-columns: minmax(1rem, auto) 1fr;
-  padding: 1rem;
+  grid-template-columns: auto 1fr;
+  padding: var(--pw-inner-spacing);
   background-color: black;
   border: var(--pw-code-editor-border);
   border-top: none;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: var(--pw-code-editor-radius-width);
+  border-bottom-right-radius: var(--pw-code-editor-radius-width);
+  line-height: var(--pw-code-line-height);
+}
+
+pre {
+  margin: 0.5rem 0;
 }
 
 .line-numbers {
-  padding-right: 1rem;
+  padding-right: var(--pw-inner-spacing);
 }
 
+.line-numbers__item {
+  color: goldenrod;
+}
+
+/* CODE */
 .code-content {
   width: 100%;
   overflow-x: auto;
   background-color: #000;
 }
 
-.title-bar__btn {
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50;
-  background-color: white;
-}
-
-.title-bar__btn--red {
-  background-color: rgb(255, 0, 106);
-  box-shadow: 0px 0px 2px red;
-}
-
-.title-bar__btn--yellow {
-  background-color: rgb(255, 208, 0);
-  box-shadow: 0px 0px 2px rgb(117, 117, 0)
-}
-
-.title-bar__btn--green {
-  background-color: rgb(33, 165, 0);
-  box-shadow: 0px 0px 2px rgb(20, 100, 0);
-}
-
 .code {
-  color: white;
   position: relative;
-}
-
-.code, .line-number {
-  line-height: var(--pw-code-line-height);
+  color: var(--pw-code-color, white);
 }
 
 .code span {
   background-color: #000;
-  padding-top: var(--pw-code-spacing);
-  padding-bottom: var(--pw-code-spacing);
-}
-
-.line-number {
-  color: goldenrod;
-  text-align: right;
+  padding-top: var(--pw-code-spacing, 1rem);
+  padding-bottom: var(--pw-code-spacing, 1rem);
 }
 
 .blue {
@@ -95,17 +94,44 @@
   animation-duration: 0.5s;
   animation-delay: 0.5s;
   animation-fill-mode: forwards;
-  animation-timing-function: ease-in;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes smallToBig {
+  from { transform: scale(0); }
+  50% { transform: scale(1.2); }
+  to { transform: scale(1); }
+}
+
+.smallToBig {
+  animation-name: smallToBig;
+  transform: scale(0);
+  animation-duration: 1s;
+}
+
+@keyframes typing {
+  from { width: 0; opacity: 1 }
+  to { width: 221px; opacity: 1; }
+}
+
+@keyframes blink-cursor {
+  from, to { border-color: transparent }
+  50% { border-color: red }
+}
+
+.typing {
+  overflow: hidden;
   opacity: 0;
+  width: 221px;
+  border-right: 3px solid red;
+  animation-name: typing, blink-cursor;
+  animation-duration: 2s, 1s;
+  animation-timing-function: steps(20, end), ease-in;
+  animation-fill-mode: forwards, both;
+  animation-delay: 1s, 1s;
+  animation-iteration-count: 1, infinite;
 }
 
-.leftIn {
-  animation-name: leftIn;
-}
-
-.rightIn {
-  animation-name: rightIn;
-}
 
 @keyframes leftIn {
   from { transform: translateX(-100%); opacity: 0; }
@@ -117,25 +143,12 @@
   to { transform: translateX(0); opacity: 1;}
 }
 
-.typing {
-  overflow: hidden;
+.leftIn {
+  animation-name: leftIn;
   opacity: 0;
-  width: 221px;
-  border-right: 3px solid red;
-  animation-name: typing, blink-cursor;
-  animation-duration: 3s, 1s;
-  animation-timing-function: steps(40, end), ease-in;
-  animation-fill-mode: forwards, both;
-  animation-delay: 1s, 1s;
-  animation-iteration-count: 1, infinite;
 }
 
-@keyframes typing {
-  from { width: 0; opacity: 1 }
-  to { width: 221px; opacity: 1; }
-}
-
-@keyframes blink-cursor {
-  from, to { border-color: transparent }
-  50% { border-color: red }
+.rightIn {
+  animation-name: rightIn;
+  opacity: 0;
 }
