--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,31 +8,13 @@ body {
   font-family: 'Courier New', Courier, monospace;
   background-color: var(--pw-bg-color);
   color: var(--pw-text-color, white);
-  font-size: var(--pw-font-size, 16px);
 }
 
 main {
   padding: var(--pw-spacing);
 }
 
-h1 {
+.code-title {
   font-size: 1.8rem;
-}
-
-.title {
-  margin: 0;
-  padding: var(--pw-inner-space);
-  line-height: var(--pw-code-line-height);
-  margin-bottom: var(--pw-spacing);
-}
-
-p {
-  padding-top: 0;
-}
-
-.info {
-  display: grid;
-  grid-template-columns: 1fr;
-  position: relative;
 }
 
