--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,15 +1,23 @@
 html {
+  
   --pw-text-color: black;
+  --pw-text-size: 16px;
   --pw-bg-color: white;
   --pw-bg-edge-color: #4158D0;
-  --pw-bg-edge: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
-  --pw-button-deep-bg: linear-gradient(43deg, #4158D0 0%, #C850C0 100%);
-  --pw-button-bg-shadow: linear-gradient(43deg, #4158D0 0%, #C850C0 100%);
+  --pw-bg-edge: linear-gradient(45deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+  --pw-button-deep-bg: linear-gradient(45deg, #4158D0 0%, #C850C0 100%);
+  --pw-button-bg-shadow: linear-gradient(45deg, #4158D0 0%, #C850C0 100%);
   --pw-spacing: 1rem;
-  --pw-inner-space: 1rem;
+  --pw-inner-spacing: 1rem;
+  
+  /* code editor representation */
+  --pw-code-color: white;
+  --pw-code-size: 14px;
   --pw-code-line-height: 1.4;
   --pw-code-spacing: 0.5rem;
+  --pw-code-editor-radius-width: 5px;
   --pw-code-editor-border: none;
+  --pw-code-editor-bg-title-bar: linear-gradient(45deg, rgb(0, 140, 255), rgb(184, 153, 255) 70%);
 }
 
 
