--- a/src/css/code-editor.css
+++ b/src/css/code-editor.css
@@ -53,7 +53,7 @@ pre {
 }
 
 .line-numbers__item {
-  color: goldenrod;
+  color: gray;
 }
 
 /* CODE */
@@ -63,12 +63,12 @@ pre {
   background-color: #000;
 }
 
-.code {
+.pre-code {
   position: relative;
   color: var(--pw-code-color, white);
 }
 
-.code span {
+.code {
   background-color: #000;
   padding-top: var(--pw-code-spacing, 1rem);
   padding-bottom: var(--pw-code-spacing, 1rem);
@@ -99,7 +99,7 @@ pre {
 
 @keyframes smallToBig {
   from { transform: scale(0); }
-  50% { transform: scale(1.2); }
+  50% { transform: scale(1.1); }
   to { transform: scale(1); }
 }
 
@@ -126,9 +126,9 @@ pre {
   border-right: 3px solid red;
   animation-name: typing, blink-cursor;
   animation-duration: 2s, 1s;
-  animation-timing-function: steps(20, end), ease-in;
+  animation-timing-function: steps(24, end), ease-in;
   animation-fill-mode: forwards, both;
-  animation-delay: 1s, 1s;
+  animation-delay: 2s, 1s;
   animation-iteration-count: 1, infinite;
 }
 
