--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
 @import url('./variables.css');
 @import url('./reset.css');
+@import url('./animations.css');
 @import url('./header.css');
 @import url('./code-editor.css');
 @import url('./illustrations.css');
@@ -7,7 +8,11 @@
 body {
   font-family: 'Courier New', Courier, monospace;
   background-color: var(--pw-bg-color);
-  color: var(--pw-text-color, white);
+  color: var(--pw-text-color, black);
+}
+
+h1 {
+  font-size: 1.8rem;
 }
 
 main {
